feat: rework dependency injection, module system